--- a/OpenIGTLinkIF/Widgets/Resources/UI/qSlicerIGTLConnectorPropertyWidget.ui
+++ b/OpenIGTLinkIF/Widgets/Resources/UI/qSlicerIGTLConnectorPropertyWidget.ui
@@ -104,13 +104,31 @@
        </layout>
       </item>
       <item row="3" column="0">
+         <widget class="QLabel" name="MRMLNodeAlgorithm">
+           <property name="text">
+             <string>MRMLNodeAlgorithm:</string>
+           </property>
+         </widget>
+      </item>
+      <item row="3" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+             <widget class="QCheckBox" name="UseStreamingVolumeCheckBox">
+               <property name="text">
+                 <string>UseStreamingVolume</string>
+               </property>
+             </widget>
+           </item>
+         </layout>
+      </item>  
+      <item row="4" column="0">
        <widget class="QLabel" name="ConnectorHostnameLabel">
         <property name="text">
          <string>Hostname:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QFrame" name="ConnectorAddressFrame">
         <property name="frameShape">
          <enum>QFrame::NoFrame</enum>
@@ -118,7 +136,7 @@
         <property name="frameShadow">
          <enum>QFrame::Plain</enum>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
          <property name="margin">
           <number>0</number>
          </property>
