--- a/OpenIGTLinkIF/Widgets/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
+++ b/OpenIGTLinkIF/Widgets/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
@@ -40,6 +40,7 @@
        <string>vtkMRMLVolumeNode</string>
        <string>vtkMRMLModelNode</string>
        <string>vtkMRMLTextNode</string>
+       <string>vtkMRMLIGTLTrackingDataBundleNode</string>
       </stringlist>
      </property>
      <property name="addEnabled">
