ENH: Add support for transferring markups fiducial node as POINT message
Fixes #67

--- a/OpenIGTLinkIF/Widgets/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
+++ b/OpenIGTLinkIF/Widgets/Resources/UI/qSlicerIGTLIONodeSelectorWidget.ui
@@ -40,6 +40,7 @@
        <string>vtkMRMLVolumeNode</string>
        <string>vtkMRMLModelNode</string>
        <string>vtkMRMLTextNode</string>
+       <string>vtkMRMLMarkupsFiducialNode</string>
        <string>vtkMRMLIGTLTrackingDataBundleNode</string>
       </stringlist>
      </property>
